--- a/home_page/home_page.html
+++ b/home_page/home_page.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-    <style></style>
+    <title>Game Verse</title>
+    <link rel="stylesheet" href="stylehome.css">
     <script></script>
 </head>
 <body>
     <header>
-        <h1>game store</h1>
+        <h1>Fight Arena</h1>
         <nav>
             <ul>
                  <li><a herf="home_page.html"> Home </a></li>
                   <li><a herf="games.html"> Games </a></li>
                   <li><a herf="support.html"> Support </a></li>
-                  <li><a herf="contact.html"> Contact us </a></li>
+                  <li><a herf="contact.html" target="_blank"> Contact us </a></li>
             </ul>
         </nav>
     </header> 
@@ -35,26 +35,30 @@
         <main>
 
             <section class="hero">
-                <h2>Welcome to Game Store</h2>
+                <h2>Welcome to Fight Arena</h2>
                 <p>Discover our latest games</p>
-                <button>explore more</button>
+                <button>explore now</button>
             </section>
             
             <section class="special-games">
                 <h3>Special Games For You</h3>
                 <div class="game-card">
+                    <img src="https://placehold.co/100x100">
                     <h4>game</h4>
                     <p>Description of game</p>
                 </div>
                 <div class="game-card">
+                    <img src="https://placehold.co/100x100" >
                     <h4>game</h4>
                     <p>Description of game</p>
                 </div>
                 <div class="game-card">
+                    <img src="https://placehold.co/100x100">
                     <h4>game</h4>
                     <p>Description of game</p>
                 </div>
                 <div class="game-card">
+                    <img src="https://placehold.co/100x100" >
                     <h4>game</h4>
                     <p>Description of game</p>
                 </div>
@@ -62,7 +66,7 @@
         </main>
     </div>
     <footer>
-        <p> &copy; 2025 game store - All rights reserved</p>
+        <p> &copy; 2025 Fight Arena - All rights reserved</p>
     </footer>
 
 
