--- a/gamepadge.html
+++ b/gamepadge.html
@@ -11,9 +11,9 @@
     <div class="header">
         <h1 class="header-title">🎮 Fight Arena 🎮</h1>
         <div class="nav-links">
-            <a href="home.html">Home</a>
-            <a href="details.html">Details</a>
-            <a href="card.html">Card</a>
+            <a href="home_page/home_page.html">Home</a>
+            <a href="det.html">Details</a>
+            <a href="1.html">Cart</a>
         </div>
     </div>
 
