--- a/home_page/home_page.html
+++ b/home_page/home_page.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game Verse</title>
+    <title>Fight Arena</title>
     <link rel="stylesheet" href="stylehome.css">
     <script></script>
 </head>
@@ -13,8 +13,7 @@
         <nav>
             <ul>
                  <li><a herf="home_page.html"> Home </a></li>
-                  <li><a herf="games.html"> Games </a></li>
-                  <li><a herf="support.html"> Support </a></li>
+                  <li><a herf="file:///D:/Downloads/CS/web_prog/web-project/gamepadge.html"> Games </a></li>
                   <li><a herf="contact.html" target="_blank"> Contact us </a></li>
             </ul>
         </nav>
@@ -26,8 +25,8 @@
             <ul>
                 <li><a href="#">Action</a></li>
                 <li><a href="#">Adventure</a></li>
-                <li><a href="#">RPG</a></li>
-                <li><a href="#">Sports</a></li>
+                <li><a href="#">Racing</a></li>
+                <li><a href="#">Puzzle</a></li>
             </ul>
 
         </aside>
@@ -37,7 +36,7 @@
             <section class="hero">
                 <h2>Welcome to Fight Arena</h2>
                 <p>Discover our latest games</p>
-                <button>explore now</button>
+                <button onclick="location.href='gamepadge.html'">Explore now</button>
             </section>
             
             <section class="special-games">
