--- a/det.html
+++ b/det.html
@@ -12,36 +12,36 @@
         <h1> Game Details </h1>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="#">Games</a></li>
-                <li><a href="#">Details</a></li>
+                <li><a href="home_page/home_page.html">Home</a></li>
+                <li><a href="gamepadge.html">Games</a></li>
+                <li><a href="c"></a></li>
             </ul>
         </nav>
     </header>
 
     <section class="game-details">
-        <img id="game-image" src="C:\Users\BluRay\OneDrive\Belgeler\v.jpg">
-        <img id="game-image" src="C:\Users\BluRay\OneDrive\Belgeler\va.jpg">
-        <img id="game-image" src="C:\Users\BluRay\OneDrive\Belgeler\val.jpg">
+        <img id="game-image" src="v.jpg">
+        <img id="game-image" src="va.jpg">
+        <img id="game-image" src="val.jpg">
         <video id="game-image" src="" controls width="250" height="250"></video>
         <h1 id="game-title">valorant</h1>
         <p id="game-description">Shooting,Action,Online</p>
         <p id="game-price">30$<br/>30GB</p>
-        <button>Buy</button>
+        <button onclick="location.href='1.html'">add to Cart</button>
     </section>
 <section class="game-details">
     <img id="game-image" src="" alt="">
     <h1 id="game-title">Name</h1>
     <p id="game-description">Action</p>
     <p id="game-price">50$</p>
-    <button>Buy</button>
+    <button onclick="location.href='1.html'">add to Cart</button>
 </section>
 <section class="game-details">
     <img id="game-image" src="" alt="">
     <h1 id="game-title">Name</h1>
     <p id="game-description">Horror</p>
     <p id="game-price">30$</p>
-    <button>Buy</button>
+    <button onclick="location.href='1.html'">add to Cart</button>
 </section>
 </body>
 </html>
