Add signup page and styles

--- a/gamepadge.html
+++ b/gamepadge.html
@@ -31,7 +31,7 @@
                 <img src="images/adventure.jpg" alt="Adventure"> 
             </ul>
             <h1 class="a1">Game time </h1>
-                <img src="./all.jpg" alt="Game photo" heht="250px" width="250px">
+                <img src="./im5.jpg" alt="Game photo" heht="250px" width="250px">
         </div>
 
         <div class="main-content">
