--- a/home_page/home_page.html
+++ b/home_page/home_page.html
@@ -36,7 +36,7 @@
             <section class="hero">
                 <h2>Welcome to Fight Arena</h2>
                 <p>Discover our latest games</p>
-                <button onclick="location.href='gamepadge.html'">Explore now</button>
+                <button onclick="location.href='../gamepadge.html'">Explore now</button>
             </section>
             
             <section class="special-games">
