--- a/sign.html
+++ b/sign.html
@@ -12,9 +12,9 @@
    <h2 class="s1"> sign up  </h2>
 
     <form class="s1">
-   <input type="text" placeholder="Enter your name " required>
-   <input type="email" placeholder="Enter your email" required><br>
-   <input type="tel" placeholder="Enter your phone" required>
+   <input type="text" placeholder=" Username " required>
+   <input type="email" placeholder=" email" required><br>
+   <input type="tel" placeholder=" phone" required>
    <input type="password" placeholder="password" id="password" name="password" required><br>
 <input type="radio" id="male" name="gender" value="male" >
    <label for="male"> male  </label>
