editted sign up
border and font

--- a/gamepadge.html
+++ b/gamepadge.html
@@ -42,7 +42,13 @@
             <video muted autoplay controls width="50%">
                 <source src="game-trailer.mp4" type="video/mp4">
                 <source src="game-trailer.ogg" type="video/ogg">
-            </video>
+            </video><br>
+            <img src="gamephoto.jpg" alt="Special Game Photo" width="100%">
+            <p>Video about this game:</p>
+            <video muted autoplay controls width="50%">
+                <source src="game-trailer.mp4" type="video/mp4">
+                <source src="game-trailer.ogg" type="video/ogg"><hr>
+                <img src="gamephoto.jpg" alt="Special Game Photo" width="100%">
         </div>
 
         <div class="right-section">
