--- a/sign.html
+++ b/sign.html
@@ -8,20 +8,23 @@
 </head>
 <body>
     <h1 class="top">Fight Arena</h1>
+ <div class="s">
+     <h2 class="s1" > sign up  </h2>
 
-   <h2 class="s1"> sign up  </h2>
-
-    <form class="s1">
-   <input type="text" placeholder=" Username " required>
-   <input type="email" placeholder=" email" required><br>
-   <input type="tel" placeholder=" phone" required>
-   <input type="password" placeholder="password" id="password" name="password" required><br>
-<input type="radio" id="male" name="gender" value="male" >
-   <label for="male"> male  </label>
-   <input type="radio" id="female" name="gender" value="female" >
-   <label for="female"> female  </label><br>
-   <input  type="submit" id="s2">
-   <input type="reset" id="s2"><br>
+          <form class="s1">
+                      <input type="text" placeholder=" Username " required>
+                      <input type="email" placeholder=" email" required><br>
+                        <input type="tel" placeholder=" phone" required>
+                         <input type="password" placeholder="password" id="password" name="password" required><br>
+                         <div  class="gender">
+                        <input type="radio" id="male" name="gender" value="male" >
+                        <label for="male"> male  </label>
+                     <input type="radio" id="female" name="gender" value="female" >
+                      <label for="female"> female  </label><br>
+                       </div>
+                            <input  type="submit" id="s2">
+                            <input type="reset" id="s2"><br>
+  </div>
     </form>
     <div class="footer">
     <h1> To contact us </h1>
