--- a/home_page/home_page.html
+++ b/home_page/home_page.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fight Arena</title>
     <link rel="stylesheet" href="stylehome.css">
-    <script></script>
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
 </head>
 <body>
     <header>
@@ -18,6 +19,14 @@
             </ul>
         </nav>
     </header> 
+
+    <div class="profile">
+        <div class="profile-icon"><i class='bx bxs-user-circle' ></i></div>
+            <div class="menu">
+            <a href="../home_page/login/login.html">log in</a>
+            <a href="../sign.html">sign up</a>
+            </div>
+    </div>
 
     <div class="container">
         <aside class="sidebar">
@@ -68,6 +77,7 @@
         <p> &copy; 2025 Fight Arena - All rights reserved</p>
     </footer>
 
+    <script src="script.js"></script>
 
 </body>
 </html>
