solve link problem after handling pages in file
solve links problem
add log and sign links in game pages

--- a/det.html
+++ b/det.html
@@ -13,7 +13,7 @@
         <nav>
             <ul>
                 <li><a href="home_page/home_page.html">Home</a></li>
-                <li><a href="gamepadge.html">Games</a></li>
+                <li><a href="./game page (haitham)/gamepage.html">Games</a></li>
                 <li><a href="c"></a></li>
             </ul>
         </nav>
