--- a/game page (haitham)/gamepage.html
+++ b/game page (haitham)/gamepage.html
@@ -11,9 +11,11 @@
     <div class="header">
         <h1 class="header-title">🎮 Fight Arena 🎮</h1>
         <div class="nav-links">
-            <a href="home_page/home_page.html">Home</a>
-            <a href="det.html">Details</a>
-            <a href="1.html">Cart</a>
+            <a href="../home_page/home_page.html">Home</a>
+            <a href="../det.html">Details</a>
+            <a href="../1.html">Cart</a>
+            <a href="./sign.html"> sign up </a>
+            <a href="../home_page/login/login.html"> log in    </a>
         </div>
     </div>
 
