--- a/home_page/home_page.html
+++ b/home_page/home_page.html
@@ -14,8 +14,8 @@
         <nav>
             <ul>
                  <li><a href="home_page.html"> Home </a></li>
-                  <li><a href="../gamepadge.html"> Games </a></li>
-                  <li><a href="contact.html" target="_blank"> Contact us </a></li>
+                  <li><a href="../game page (haitham)/gamepage.html"> Games </a></li>
+                  <li><a href="../contact us" target="_blank"> Contact us </a></li>
             </ul>
         </nav>
     </header> 
