--- a/home_page/login/login.html
+++ b/home_page/login/login.html
@@ -25,7 +25,7 @@
             </div>
             <button type="submit" class="btn">Login</button>
             <div class="register-link">
-                <p>Don't have an account? <a href="../../sign.html"> Register (sign in)</a></p>
+                <p>Don't have an account? <a href="../../game page (haitham)/sign.html"> Register (sign up)</a></p>
             </div>
         </form>
     </div>
