link sign up with login if the  user havaing an account
.......................

--- a/game page (haitham)/sign.html
+++ b/game page (haitham)/sign.html
@@ -31,6 +31,7 @@
                        </div>
                             <input  type="submit" id="s2">
                             <input type="reset" id="s2"><br>
+                            <a href="../home_page/login/login.html" id="s3"> if you have an account   </a>
   </div>
     </form>
     <div class="footer">
