--- a/game page (haitham)/sign.html
+++ b/game page (haitham)/sign.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>sign up</title>
     <link rel="stylesheet" href="sign.css">
-    <script src="./sign.js"> </script>
+    <script src="./sign.js" defer> </script>
 </head>
 <body>
     <h1 class="top">Fight Arena</h1>
@@ -15,7 +15,7 @@
           <form class="s1">
                       <input type="text" placeholder=" Username " required>
                       <input type="email" placeholder=" email" required><br>
-                        <input type="tel" placeholder=" phone" required>
+                        <input type="tel" placeholder=" phone" required id="p1">
                          <input type="password" placeholder="password" id="password" name="password" required><br>
                          <div id="strengthMessage" style="color: white; font-weight: bold;"></div>
                          <div class="input-pass"> <label for="check">  
@@ -29,8 +29,9 @@
                      <input type="radio" id="female" name="gender" value="female" >
                       <label for="female"> female  </label><br>
                        </div>
-                            <input  type="submit" id="s2">
+                            <input  type="submit" value="confirm" id="s2">
                             <input type="reset" id="s2"><br>
+                            <div id="s2"></div>
                             <a href="../home_page/login/login.html" id="s3"> if you have an account   </a>
   </div>
     </form>
