--- a/home_page/home_page.html
+++ b/home_page/home_page.html
@@ -15,7 +15,7 @@
             <ul>
                  <li><a href="home_page.html"> Home </a></li>
                   <li><a href="../game page (haitham)/gamepage.html"> Games </a></li>
-                  <li><a href="../contact .html" target="_blank"> Contact us </a></li>
+                  <li><a href="../contact us page/contactus.html" target="_blank"> Contact us </a></li>
             </ul>
         </nav>
     </header> 
