--- a/game page (haitham)/gamepage.html
+++ b/game page (haitham)/gamepage.html
@@ -14,9 +14,12 @@
             <a href="../home_page/home_page.html">Home</a>
             <a href="../det.html">Details</a>
             <a href="../1.html">Cart</a>
-            <a href="./sign.html"> sign up </a>
-            <a href="../home_page/login/login.html"> log in    </a>
-        </div>
+            <a href="../contact us page/contactus.html">contact us </a>
+       </div>
+       <div class="auth-links">
+        <a href="../home_page/login/login.html">Login</a>
+        <a href="sign.html">Sign Up</a>
+      </div>
     </div>
 
     <div class="container">
@@ -50,7 +53,7 @@
         <div class="right-section">
             <h1 class="a1">   only in fight Arena     </h1>
              <img src="./UaVQs29W.jpg" alt="gamephoto" height="250px" width="250px" >
-              
+             <iframe width="400" height="377" src="https://www.youtube.com/embed/tk-dPzKhQGs" title="promo about this game" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             
         </div>
     </div>
@@ -59,8 +62,8 @@
         <form>
         <h2>Players' Reviews</h2>
         <input type="text" placeholder="Write a review..."><br>
-        <input type="submit" >
-        <input type="reset">
+        <input type="submit" class="footer-button">
+        <input type="reset" class="footer-button">
     </form>
     </div>
 
