--- a/game page (haitham)/sign.html
+++ b/game page (haitham)/sign.html
@@ -37,7 +37,7 @@
     </form>
     <div class="footer">
     <h1> To contact us </h1>
-    <a href="mailto:contact@fightArena.com"> contact via E-mail</a><br>
+    <a href="../contact us page/contactus.html"> contact us page</a><br>
     <a href=" https://www.facebook.com" target="_blank"> facebook </a>
     </div>
 </body>
