--- a/home_page/home_page.html
+++ b/home_page/home_page.html
@@ -24,7 +24,7 @@
         <div class="profile-icon"><i class='bx bxs-user-circle' ></i></div>
             <div class="menu">
             <a href="../home_page/login/login.html">log in</a>
-            <a href="../sign.html">sign up</a>
+            <a href="../game page (haitham)/sign.html">sign up</a>
             </div>
     </div>
 
