--- a/gamepadge.html
+++ b/gamepadge.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fight Arena</title>
-    <link rel="stylesheet" href="game.css">
+    <link rel="stylesheet" href="game.css.css">
 </head>
 
 <body>
