Edite Cart Page

--- a/det.html
+++ b/det.html
@@ -27,21 +27,21 @@
         <h1 id="game-title">valorant</h1>
         <p id="game-description">Shooting,Action,Online</p>
         <p id="game-price">30$<br/>30GB</p>
-        <button onclick="location.href='1.html'">add to Cart</button>
+        <button onclick="location.href='Shopping_Cart (M)/1.html'">add to Cart</button>
     </section>
 <section class="game-details">
     <img id="game-image" src="" alt="">
     <h1 id="game-title">Name</h1>
     <p id="game-description">Action</p>
     <p id="game-price">50$</p>
-    <button onclick="location.href='1.html'">add to Cart</button>
+    <button onclick="location.href='Shopping_Cart (M)/1.html'">add to Cart</button>
 </section>
 <section class="game-details">
     <img id="game-image" src="" alt="">
     <h1 id="game-title">Name</h1>
     <p id="game-description">Horror</p>
     <p id="game-price">30$</p>
-    <button onclick="location.href='1.html'">add to Cart</button>
+    <button onclick="location.href='Shopping_Cart (M)/1.html'">add to Cart</button>
 </section>
 </body>
 </html>
