--- a/game page (haitham)/gamepage.html
+++ b/game page (haitham)/gamepage.html
@@ -13,7 +13,7 @@
         <div class="nav-links">
             <a href="../home_page/home_page.html">Home</a>
             <a href="../det.html">Details</a>
-            <a href="../1.html">Cart</a>
+            <a href="../Shopping_Cart (M)/1.html">Cart</a>
             <a href="../contact us page/contactus.html">contact us </a>
        </div>
        <div class="auth-links">
