connect with db
work on get info from rgrestrition from(sign up page) and saving him in data bais

--- a/game page (haitham)/sign.html
+++ b/game page (haitham)/sign.html
@@ -12,10 +12,10 @@
  <div class="s">
      <h2 class="s1" > sign up  </h2>
 
-          <form class="s1">
-                      <input type="text" placeholder=" Username " required>
-                      <input type="email" placeholder=" email" required><br>
-                        <input type="tel" placeholder=" phone" required id="p1">
+          <form  action="sign.php" method="post" class="s1">
+                    <input type="text" placeholder="Username" name="username"  required>
+                      <input type="email" placeholder=" email"    name="email"                required><br>
+                        <input type="text" placeholder=" phone"    name="phone"                          required id="p1">
                          <input type="password" placeholder="password" id="password" name="password" required><br>
                          <div id="strengthMessage" style="color: white; font-weight: bold;"></div>
                          <div class="input-pass"> <label for="check">  
