--- a/game page (haitham)/gamepage.html
+++ b/game page (haitham)/gamepage.html
@@ -42,11 +42,24 @@
         <div class="main-content">
             <h2 class="a1">Welcome to Fight Arena</h2>
             <p>Special games only in Fight Arena</p>
-            <img src="gamephoto.jpg" alt="Special Game Photo" width="100%">
+            <img src="./gta5.jpg" alt="Special Game Photo" width="100%">
             <p>Video about this game:</p>
-            <video muted autoplay controls width="50%">
-                <source src="game-trailer.mp4" type="video/mp4">
+            <video muted controls autoplay width="100%">
+                <source src="gtavid.mp4" type="video/mp4">
                 <source src="game-trailer.ogg" type="video/ogg">
+            </video>
+            <p>Special games only in Fight Arena</p>
+            <img src="Easports.jpg" alt="Special Game Photo" width="100%">
+            <p>Video about this game:</p>
+            <video muted  controls width="100%">
+                <source src="easportsfc24.mp4" type="video/mp4">
+                <source src="game-trailer.ogg" type="video/ogg">
+            </video>
+            <p>Special games only in Fight Arena</p>
+            <img src="pubgpink.jpg" alt="Special Game Photo" width="50%">
+            <p>Video about this game:</p>
+            <video muted   controls width="100%">
+                <source src="pubg.mp4" type="video/mp4">
             </video>
         </div>
 
