--- a/Shopping_Cart (M)/payment.html
+++ b/Shopping_Cart (M)/payment.html
@@ -11,7 +11,7 @@
 <body>
 
     <form action="checkout.php" method="POST">
-        <h2 align="center"> Customer data🧾</h2>
+        <h2 align="center"> Customer data</h2>
 
         <label for="name"> Name : </label>
         <input type="text" id="name" name="name" placeholder="Enter Your Name" required>
@@ -23,7 +23,7 @@
         <input type="tel" id="phone" name="phone" placeholder="Enetr Your Phone Number" required>
 
         <label for="address"> Address : </label>
-        <textarea id="address" name="address" rows="4" placeholder="Enetr Your Address" required></textarea>
+       <input id="address" name="address" rows="4" placeholder="Enetr Your Address" required></input>
 
         <label for="payment">Payment Method : </label>
         <select id="payment" name="payment">
