--- a/game page (haitham)/gamepage.html
+++ b/game page (haitham)/gamepage.html
@@ -73,7 +73,7 @@
                 <img src="images/adventure.jpg" alt="Adventure"> 
             </ul>
             <h1 class="a1">Game time </h1>
-                <img src="./all.jpg" alt="Game photo" heht="250px" width="250px">
+                <img src="../all.jpg" alt="Game photo" heht="250px" width="250px">
         </div>
 
         <div class="main-content">
@@ -102,7 +102,7 @@
 
         <div class="right-section">
             <h1 class="a1">   only in fight Arena     </h1>
-             <img src="./UaVQs29W.jpg" alt="gamephoto" height="250px" width="250px" >
+             <img src="../UaVQs29W.jpg" alt="gamephoto" height="250px" width="250px" >
              <iframe width="400" height="377" src="https://www.youtube.com/embed/tk-dPzKhQGs" title="promo about this game" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             
         </div>
